# toyssd

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  experiment.py  experiment0.py
.github/workflows/: build.yml  format.yml
api/: sc_main_stub.cpp  ssdsim_api.cpp  ssdsim_api.h
cmake/: toyssdConfig.cmake.in
config/: default.json
docs/: TODO.md  toy_ssd_simulator_design.md
fio_plugin/: demo_job.fio  ssdsim_engine.c
sim/: CMakeLists.txt  Top.h  main.cpp
sim/fw/: FTL.cpp  FTL.h  Firmware.cpp  Firmware.h
sim/host/: HostInterface.cpp  HostInterface.h
sim/nand/: NandInterface.h  NandInterfaceImpl.cpp  NandInterfaceImpl.h  NandModel.cpp  NandModel.h
sim/util/: Logger.h
tests/: CMakeLists.txt  bus_test.py  host_test.py  storage_bus_test.py  storage_test.py  system_test.py  test_ftl.cpp  test_main.cpp  test_nand.cpp
tools/: analyze_results.py  gen_config.py  plot_metrics.py  run_fio_sim.py
toyssd/: bus.py  experiment.py  host.py  storage.py  storage_bus.py  system.py
